# InstaChecker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
linux/: main.cpp
no_gui/: CMakeLists.txt  main_no_gui.cpp
windows/: CMakeLists.txt  main.cpp
